force-app/main/default/objects/Round_Robin_Config__mdt/Round_Robin_Config__mdt.object-meta.xml
<CustomObject>
    <label>Round Robin Config</label>
    <pluralLabel>Round Robin Configs</pluralLabel>
</CustomObject>