force-app/main/default/objects/Round_Robin_Config__mdt/fields/Assign_To_Field__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Field__c</fullName>
    <label>Assign To Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>