force-app/main/default/objects/Round_Robin_Config__mdt/fields/City_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Field__c</fullName>
    <label>City Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>