force-app/main/default/objects/Round_Robin_Config__mdt/fields/Course_Field__c.field-meta.xml
<CustomField>
    <fullName>Course_Field__c</fullName>
    <label>Course Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>