force-app/main/default/objects/Round_Robin_Config__mdt/fields/Enable_Sticky__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sticky__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sticky</label>
    <type>Checkbox</type>
</CustomField>