force-app/main/default/objects/Round_Robin_Config__mdt/fields/Ignore_Course_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Course_Bucket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Course Bucket</label>
    <type>Checkbox</type>
</CustomField>