force-app/main/default/objects/Round_Robin_Config__mdt/fields/Ignore_Source__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Source</label>
    <type>Checkbox</type>
</CustomField>