force-app/main/default/objects/Round_Robin_Config__mdt/fields/Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Phone_Field__c</fullName>
    <label>Phone Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>