force-app/main/default/objects/Round_Robin_Config__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>