force-app/main/default/objects/Round_Robin_Config__mdt/fields/Sticky_User_Field__c.field-meta.xml
<CustomField>
    <fullName>Sticky_User_Field__c</fullName>
    <label>Sticky User Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>