force-app/main/default/objects/Round_Robin_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Robin</fullName>
                <default>true</default>
                <label>Round Robin</label>
            </value>
            <value>
                <fullName>Eligibility Criteria</fullName>
            </value>
            <value>
                <fullName>MCOM</fullName>
            </value>
            <value>
                <fullName>CC - Pre Enrollment</fullName>
            </value>
            <value>
                <fullName>SR - Post Enrollment</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>